redoing stuff using jsonpath.  almost finished. also adding cdi.